# powerline-podman

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
src/powerline_podman/: __init__.py  segments.py
