[tool.poetry]
name = "powerline-podman"
version = "1.0.0"
description = "A custom Powerline segment for displaying the current state of Podman containers"
authors = ["Jordan Duabe <me@jduabe.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
podman = "^4.4.1"
powerline-status = "^2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
