[project]
name = "powerline-podman"
version = "1.0.4"
description = "A custom Powerline segment for displaying the current state of Podman containers"
authors = [{name = "Jordan Duabe", email = "me@jduabe.dev"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["powerline", "podman"]
dependencies = [
    "podman>=5.5.0",
    "powerline-status>=2.7",
]

[project.urls]
Homepage = "https://github.com/j4ckofalltrades/powerline-podman"
Repository = "https://github.com/j4ckofalltrades/powerline-podman"
"Bug Tracker" = "https://github.com/j4ckofalltrades/powerline-podman/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
